cluster/gitops/networking/unifi/controller/only-controller-access.yaml
---
# From https://istio.io/latest/docs/ambient/install/platform-prerequisites/#cilium
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: unifi-controller-to-aps
spec:
  description: Only allow the UniFi controller to communicate with access points
  enableDefaultDeny:
    egress: false
    ingress: false
  endpointSelector:
    matchExpressions:
      - key: external.netpols.home.arpa/unifi-aps
        operator: In
        values:
          - "true"
  ingress:
    - fromCIDRSet:
        - cidrGroupRef: unifi-aps
  egress:
    - toCIDRSet:
        - cidrGroupRef: unifi-aps
